fixed css on mobile → usr msg bug next

--- a/css/components/meme.css
+++ b/css/components/meme.css
@@ -3,9 +3,6 @@
     flex-wrap: wrap;
 }
 
-/* .canvas-container{
-
-} */
 .meme-container {
     max-width: 95vw;
     margin: auto;
